# aqmm

./: 404.html  Cargo.toml  README.md  build.rs  conclusion.html  documentation.html  index.html  intro.html  introduction.html  print.html  run_server.sh  searchindex.js  searchindex.json
app/: clients.html  intro.html  protocol.html  server.html
async/: executor.html  futures.html  intro.html  io.html
docs/: .gitignore  book.toml  deploy.sh  documentation.sh
docs/scripts/: scoring.py
docs/src/: SUMMARY.md  conclusion.md  documentation.md  intro.md  introduction.md
docs/src/app/: intro.md  protocol.md  server.md
docs/src/async/: executor.md  futures.md  intro.md  io.md
docs/src/mm/: costfn.md  ghpm.md  intro.md  score.md
docs/src/result/: intro.md  strategies.md
docs/src/server/: executor.md  io.md  market.md
mm/: costfn.html  ghpm.html  intro.html  score.html
palpatine/: Cargo.toml  test.rs
palpatine/src/: executor.rs  lib.rs  park.rs
palpatine/src/io/: mod.rs  registration.rs
palpatine/src/io/driver/: mod.rs
palpatine/src/net/: mod.rs  tcp_listener.rs  tcp_stream.rs
proto/: aqmm.proto
result/: intro.html  results.html  setup.html  strategies.html
server/: executor.html  intro.html  io.html  market.html
src/: client.rs  lib.rs  server.rs
src/io/: mod.rs  registration.rs
src/io/driver/: context.rs  mod.rs
src/market/: core.rs  mod.rs  pool.rs  router.rs  securities.rs
src/net/: codec.rs  mod.rs  tcp.rs
