[package]
name = "aqmm"
version = "0.1.0"
authors = ["hyyking <leoduret@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "aqmm"
path = "src/lib.rs"

[[bin]]
name = "aqmm-server"
path = "src/bin/server.rs"

[[bin]]
name = "aqmm-client"
path = "src/bin/client.rs"

[dependencies]
prost = {version = "0.6"}
bytes = {version = "0.5"}
log = {version = "0.4.8", features = ["max_level_trace"]}
mio = {version = "0.7", features = ["tcp", "os-poll"]}
tokio-util = {version = "0.3", default_features =false, features = ["codec", "compat"]}
uuid = {version = "0.8", features = ["v5"]}
futures = {version = "0.3.5", default_features=false, features = ["std", "executor", "async-await"]}
slab = {version = "0.4.2"}
async-task = "3"
pretty_env_logger = "0.4"

[build-dependencies]
prost-build = {version = "0.6"}
